--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
-body{
+body {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     font-family: sans-serif;
     width: 100vw;
-    background: rgb(0,195,223);
-background: linear-gradient(270deg, rgba(0,195,223,1) 0%, rgba(191,198,255,1) 100%);
+    background: rgb(0, 195, 223);
+    background: linear-gradient(270deg, rgba(0, 195, 223, 1) 0%, rgba(191, 198, 255, 1) 100%);
+
 }
 
-.convertSection{
+
+.convertSection {
     width: 60vw;
     height: 40vh;
     background-color: rgba(255, 255, 255, 0.301);
@@ -17,7 +19,8 @@ background: linear-gradient(270deg, rgba(0,195,223,1) 0%, rgba(191,198,255,1) 10
     box-shadow: 0 0 15px gray;
     text-align: center;
 }
-input{
+
+input {
     width: 50%;
     height: 30px;
     border: 1px solid gray;
@@ -25,13 +28,15 @@ input{
     border-radius: 12px;
     margin-bottom: 10px;
 }
-p{
-    font-size: 24px ;
+
+p {
+    font-size: 24px;
     color: orange;
     font-weight: bolder;
     text-shadow: 0 0 10px black;
 }
-button{
+
+button {
     height: 30px;
     font-size: 16px;
     font-weight: bold;
@@ -40,6 +45,7 @@ button{
     outline: none;
     border-radius: 5px;
 }
-button:hover{
-    box-shadow: 0 0 15px black;   
+
+button:hover {
+    box-shadow: 0 0 15px black;
 }
